--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,42 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins");
 
-*{
 
-    
+* {
     font-family: "Poppins", sans-serif;
     padding: 0;
     margin: 0;
 }
 
-
-.head{
-    min-height: 100vh;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(/images/hotel.jpg) ;
-    background-size: cover;
-    background-position: center;
-    align-items: center;
-    position: relative;
-
-    
-}
-
-a.logo {
-    text-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.7);
-    text-decoration: none;
-    color: white;
-    width: 150px;
-    font-size: 30px;
-    
-
-}
-
-
-nav{
+nav {
     display: flex;
     padding: 2% 6%;
     justify-content: space-around;
     align-items: center;
-}
-nav img{
-    width: 150px;
+    background-color: rgba(186, 178, 181,0.3);
+    height: 100px;
+
 }
 
-.links ul li{
+nav img {
+    width: 150px;
+
+}
+
+
+.links ul li {
     list-style: none;
     display: inline-block;
     padding: 8px 12px;
     position: relative;
 }
 
-.links ul li a{
+.links ul li a {
     color: #EEE2DC;
     text-decoration: none;
-    font-size: 13px;
+    font-size: 16px;
 }
 
-.links ul li::after{
+.links ul li::after {
     content: '';
     width: 0%;
     height: 2px;
@@ -64,12 +46,110 @@ nav img{
     transition: 0.5s;
 }
 
-.links ul li:hover::after{
+.links ul li:hover::after {
     width: 100%;
 }
 
 
-button{
+.slideshow-container {
+    max-width: 1000px;
+    margin: auto;
+    position: relative;
+}
+
+.mySlides {
+    display: none;
+    width: 100%;
+}
+
+.mySlides img {
+    width: 100%;
+}
+
+
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+* {
+    font-family: "Poppins", sans-serif;
+    padding: 0;
+    margin: 0;
+}
+
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+}
+
+.mySlides {
+    display: none;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.head {
+    min-height: 100vh;
+    background: black;
+    background-size: cover;
+    background-position: center;
+    align-items: center;
+    position: relative;
+}
+
+a.logo {
+    text-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.7);
+    text-decoration: none;
+    color: white;
+    width: 150px;
+    font-size: 30px;
+}
+
+
+button {
     color: #fbfcfd;
     padding: 10px 25px;
     background: transparent;
@@ -81,21 +161,254 @@ button{
     margin-left: 100px;
 }
 
-.content{ 
+.content {
+    margin-top: 300px;
     color: #fbfcfd;
     position: absolute;
     top: 50%;
     left: 8%;
     transform: translateY(-50%);
-
 }
 
-h1{
+h1 {
     font-size: 50px;
     margin: 10px 0 30px;
-    text-shadow: 5px rgba(0, 0, 0, 0.7);;
-   
+    text-shadow: 5px rgba(0, 0, 0, 0.7);
+}
+
+p {
+    margin-left: 60px;
+}
+
+* {
+    box-sizing: border-box;
+}
+body {
+    font-family: Verdana, sans-serif;
+}
+.mySlides {
+    display: none;
+}
+img {
+    vertical-align: middle;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 100%;
+  height: 20px;
+  position: relative;
+  margin: auto;
+  overflow: hidden;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+.slideshow-container {
+    max-width: 100%;
+    height: 100vh; /* Set the height to 100% of the viewport height */
+    position: relative;
+    overflow: hidden; /* Ensure no overflow */
+}
+
+.mySlides {
+    display: none;
+    width: 100%; /* Make the slides take full width */
+    height: 100%; /* Make the slides take full height */
+}
+
+.mySlides img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity of the black overlay */
+  }
+  
+  .content2 {
+    background-color: #f4f4f4;
+    padding: 50px;
+    text-align: center;
+    position: relative;
+}
+
+.content2::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('/images/another-background.jpg'); /* Replace with your image path */
+    background-size: cover;
+    background-position: center;
+    opacity: 0.6; /* Adjust the background image opacity */
+}
+.content2 h2::after {
+    content: '';
+    display: block;
+    margin: 8px auto;
+    width: 30%;
+    height: 5px;
+    border-radius: 10px;
+    background-color: #AC3B61;
+}
+
+.content2 h2,.content2 p, .content2 li {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.8s ease, transform 0.8s ease;
+}
+
+.content2.animate-in h2,.content2.animate-in p, .content2.animate-in li {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+
+.title{
+    text-align: center;
+    font-size: 4vmin;
+    color: #484872;
+}
+.row{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+
+}
+.events .row {
+    margin-top: 50px;
+
+}
+h4{
+    font-size: 3vmin;
+    color:#484872;
+    margin: 20px auto;
 }
 p{
-    margin-left: 60px;
+    color: #7c7c7c;
+    padding: 0px 40px;
+}
+.events .ctn{
+    margin-top: 30px;
+}
+
+.row .col{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+img { 
+    transition: transform .3s ease;
+
+}
+img:hover{
+    transform: scale(1.1);
+}
+
+.ctn:hover{
+    background: whitesmoke;
+    color: #AC3B61;
+    box-shadow: 2px 2px 5px rgba(0,0,0,#00000056);
+}
+
+li:hover{
+    color: #AC3B61;
+    cursor: pointer;
+}
+
+.ctn{
+    padding: 8px 15px;
+    background: #AC3B61;
+    border-radius: 30px;
+    color: whitesmoke;
+}
+
+
+
+.row .col{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.col img { 
+    max-width: 90%;
+
+}
+
+.footer{
+    width: 100%;
+    min-height: 100px;
+    padding: 20px 80px;
+    margin: 0;
+    background: #AC3B61;
+    text-align: center;
+}
+.footer p{
+    color: whitesmoke;
+    margin: 20px auto;
+    padding: 20px auto;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
 }
