--- a/css/AboutUsStyle.css
+++ b/css/AboutUsStyle.css
@@ -1,1 +1,75 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins");
 
+*{
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
+}
+.container{
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("1164484-1-hotel_carousel_large.jpg");
+    background-position: center;
+    background-size: cover;
+    padding-left: 8%;
+    padding-right: 8%;
+    box-sizing: border-box;
+}
+.navbar{
+    height: 12%;
+    display: flex;
+    align-items: center;
+}
+nav{
+    flex: 1;
+    text-align: right;
+}
+nav ul li{
+    list-style: none;
+    display: inline-block;
+    margin-left: 30px;
+}
+nav ul li a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 13px
+}
+.row{
+    display: flex;
+    height: 88%;
+    align-items: center;
+}
+.col{
+    flex-basis: 50%;
+}
+h1{
+    color: #Fff;
+    font-size: 60px;
+}
+p{
+    color: #fff;
+    font-size: 15px;
+    line-height: 15px;
+    text-align: justify;
+    line-height: 1.5;
+}
+.social-link {
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+.social-link a{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+    margin-right: 10px;
+    color: #fff;
+    background-color: #333;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+    transition: all 0.4s ease;
+}
+.social-link a:hover {
+    transform: translateY(-3px)
+}
