--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,12 @@ nav {
     padding: 2% 6%;
     justify-content: space-around;
     align-items: center;
-    background-color: rgba(186, 178, 181,0.3);
+    background-color: rgba(186, 178, 181, 0.7);
     height: 100px;
-
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000; /* Ensure the nav stays on top of other elements */
 }
 
 nav img {
@@ -31,7 +34,7 @@ nav img {
 }
 
 .links ul li a {
-    color: #EEE2DC;
+    color: #000000;
     text-decoration: none;
     font-size: 16px;
 }
@@ -279,6 +282,73 @@ img {
     position: relative;
 }
 
+.content2 .ctn{
+
+    position: flex;
+}
+
+
+
+
+/* connent 2 */ 
+.details {
+    position: relative;
+    overflow: hidden;
+    background-color: #f4f4f4;
+    padding: 50px;
+    text-align: center;
+}
+
+.details::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('/path/to/your-background-image.jpg');
+    background-size: cover;
+    background-position: center;
+    opacity: 0.6;
+    z-index: -1; /* Move the pseudo-element behind the content */
+}
+
+.details h2::after {
+    content: '';
+    display: block;
+    margin: 8px auto;
+    width: 30%;
+    height: 5px;
+    border-radius: 10px;
+    background-color: #AC3B61;
+}
+
+.details h2, .details p {
+    color: #484872;
+}
+
+.details p {
+    color: #7c7c7c;
+    padding: 0px 40px;
+    margin-bottom: 20px;
+}
+
+.details a.ctn {
+    padding: 8px 15px;
+    background: #AC3B61;
+    border-radius: 30px;
+    color: whitesmoke;
+    text-decoration: none;
+}
+
+.details a.ctn:hover {
+    background: whitesmoke;
+    color: #AC3B61;
+}
+
+
+/* content 2 */
+
 .content2::before {
     content: '';
     position: absolute;
@@ -373,6 +443,8 @@ li:hover{
     background: #AC3B61;
     border-radius: 30px;
     color: whitesmoke;
+    text-decoration: none;
+    margin: 20px;
 }
 
 
@@ -384,8 +456,9 @@ li:hover{
 
 }
 
-.col img { 
+.row .col img { 
     max-width: 90%;
+    height: 450px;
 
 }
 
@@ -393,11 +466,12 @@ li:hover{
     width: 100%;
     min-height: 100px;
     padding: 20px 80px;
-    margin: 0;
     background: #AC3B61;
     text-align: center;
+    margin-top: 30px;
 }
 .footer p{
+
     color: whitesmoke;
     margin: 20px auto;
     padding: 20px auto;
