--- a/css/AboutUsStyle.css
+++ b/css/AboutUsStyle.css
@@ -8,7 +8,7 @@
 .container{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("1164484-1-hotel_carousel_large.jpg");
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("/images/hotel.jpg");
     background-position: center;
     background-size: cover;
     padding-left: 8%;
