--- a/css/styleRooms.css
+++ b/css/styleRooms.css
@@ -331,3 +331,65 @@ a.logo {
     cursor: pointer;
     transform: scale(1.1);
 }
+
+#bookingModal {
+    position: fixed;
+    top: 30%; /* Adjust the percentage value to raise the modal higher */
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-height: 90vh;
+    overflow-y: auto;
+    width: 80%;
+    max-width: 900px; /* Set a maximum width to the modal */
+    padding: 20px;
+    box-sizing: border-box;
+    overflow: hidden; /* Hide the scrollbar */
+}
+
+#invoiceContent {
+    text-align: center;
+    margin-top: 20px;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    max-width: 80%; /* Set the maximum width */
+    max-height: 80%; /* Set the maximum height */
+    overflow: auto;
+}
+
+#invoiceContent h2 {
+    color: #AC3B61;
+    font-size: 28px;
+    margin-bottom: 15px;
+}
+
+#invoiceContent p {
+    margin-bottom: 10px;
+    line-height: 1.5;
+}
+
+#invoiceContent strong {
+    color: #484872;
+}
+
+#invoiceContent hr {
+    border: 1px solid #AC3B61;
+    margin: 15px 0;
+}
+
+#invoiceContent button {
+    background-color: #AC3B61;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 15px;
+    transition: background-color 0.3s;
+}
+
+#invoiceContent button:hover {
+    background-color: #832C4B;
+}
