--- a/css/styleRooms.css
+++ b/css/styleRooms.css
@@ -338,7 +338,8 @@ a.logo {
     max-width: 900px; /* Set a maximum width to the modal */
     padding: 30px;
     box-sizing: border-box;
-    overflow: hidden; /* Hide the scrollbar */
+    overflow-y: scroll; /* Hide the scrollbar */
+    overflow-x:hidden; /* Hide the scrollbar */
     margin-bottom: 10px; /* Add margin to the bottom */
 
 }
