--- a/css/stylesLogin.css
+++ b/css/stylesLogin.css
@@ -1,13 +1,24 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins");
+
+
+* {
+    font-family: "Poppins", sans-serif;
+    padding: 0;
+    margin: 0;
+}
+
+
 body, html {
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 body {
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
-    background: url('/images/room2.jpg') center/cover; /* Added no-repeat */
+    background: url('/images/room2.jpg') center/cover no-repeat; /* Added no-repeat */
     backdrop-filter: blur(4px);
     height: 100vh;
 }
