--- a/css/style.css
+++ b/css/style.css
@@ -161,11 +161,11 @@ button {
     outline: none;
     cursor: pointer;
     margin-left: 100px;
-    margin-top: 200px;
+    margin-top: 50px;
 }
 
 .content {
-    margin-top: 200px;
+    margin-top: 100px; /* Adjust this value to your liking */
     color: #fbfcfd;
     position: absolute;
     top: 50%;
