--- a/css/stylesLogin.css
+++ b/css/stylesLogin.css
@@ -3,39 +3,19 @@
 
 * {
     font-family: "Poppins", sans-serif;
-<<<<<<< HEAD
     padding: 0;
     margin: 0;
 }
 
 
-body, html {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-=======
-}
 
-
-
-body, html {
-    margin: 0;
-    padding: 0;
-    overflow: hidden; /* Add this line to hide the overflow */
->>>>>>> 942a01cbfa39dc8d7b654ac445373eb19421259a
-}
 
 /* The rest of your CSS remains unchanged */
 body {
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
-<<<<<<< HEAD
-    background: url('/images/room2.jpg') center/cover no-repeat; /* Added no-repeat */
-=======
-    background: url('/images/room2.jpg') center/cover no-repeat;
->>>>>>> 942a01cbfa39dc8d7b654ac445373eb19421259a
-    backdrop-filter: blur(4px);
+    background-color: #f8f9fa; /* Set your preferred color code */
     height: 100vh;
 }
 
