--- a/css/stylesLogin.css
+++ b/css/stylesLogin.css
@@ -15,8 +15,10 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
-    background-color: #f8f9fa; /* Set your preferred color code */
+    background-color: #AC3B61; /* Set your preferred color code */
     height: 100vh;
+    background: url('https://cf.bstatic.com/xdata/images/hotel/max1024x768/375847903.jpg?k=3103212f0f694b5fcc4deec9d0025d37621c0e4e305c7b64a387b0d8b4f000ce&o=&hp=1') center/cover no-repeat fixed;
+
 }
 
 .container {
@@ -24,6 +26,9 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background-color: #f8f9fa; /* Set your preferred color code */
+    background: url('https://cf.bstatic.com/xdata/images/hotel/max1024x768/375847903.jpg?k=3103212f0f694b5fcc4deec9d0025d37621c0e4e305c7b64a387b0d8b4f000ce&o=&hp=1') center/cover no-repeat fixed;
+
 }
 
 nav {
