--- a/html/admin-dashboard/style.css
+++ b/html/admin-dashboard/style.css
@@ -421,12 +421,12 @@ body {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
-    max-width: 100%; /* Adjust as needed */
+    max-width: 100%;
     flex-wrap: wrap;
 }
 
 .condition {
-    flex: 0 0 calc(33.33% - 10px); /* Adjust the percentage and margin as needed */
+    flex: 0 0 calc(33.33% - 10px); 
     box-sizing: border-box;
 }
 
@@ -434,7 +434,7 @@ body {
 
 #content main .box-info {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(calc(33.33% - 24px), 1fr)); /* Adjust the margin value as needed */
+    grid-template-columns: repeat(auto-fit, minmax(calc(33.33% - 24px), 1fr)); 
     grid-gap: 24px;
     margin-top: 36px;
 
@@ -443,8 +443,8 @@ body {
 #content main .box-info li img {
     width: 100%;
     height: auto;
-    min-width: 110px; /* Adjust this value as needed */
-    min-height: 110px; /* Adjust this value as needed */
+    min-width: 110px; 
+    min-height: 110px; 
     object-fit: cover;
 	border-radius: 10px;
 	box-shadow: #0C0C1E;
@@ -453,7 +453,7 @@ body {
 
 
 #content main .box-info li:hover img {
-    transform: scale(1.2); /* Adjust the scale factor as needed */
+    transform: scale(1.2); 
 }
 #content main .box-info li {
 	padding: 24px;
